--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  
+  assets:
+    - assets/background.jpg
+
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
