--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   http: ^1.2.0
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
