--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fluttermovies
-description: "A new Flutter project."
+description: "Catálogo de películas con API y Firebase"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -14,7 +14,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
-
 
 dev_dependencies:
   flutter_test:
